# ToDoList

./: CMakeLists.txt  ChangeTaskInfo.cpp  ChangeTaskInfo.h  DayDraw.cpp  DayDraw.h  DayLogic.cpp  MyButton.h  PARAMETERS.h  TaskWindow.cpp  TaskWindow.h  chrono.h  main.cpp
Graph_lib/: GUI.cpp  GUI.h
MainWindowPart/: MainWindow.cpp  MainWindow.h  day.h  main.cpp  month.cpp  month.h  year.cpp  year.h
src/: ChangeTaskInfo.cpp  ChangeTaskInfo.h  DayDraw.cpp  DayDraw.h  DayLogic.cpp  DayLogic.h  MyButton.cpp  MyButton.h  PARAMETERS.h  TaskWindow.cpp  TaskWindow.h  main.cpp
src/DayWork/: ChangeTaskInfo.cpp  ChangeTaskInfo.h  DayDraw.cpp  DayDraw.h  HelpWindow.cpp  HelpWindow.h  MyButton.cpp  MyButton.h  MyWidgets.cpp  MyWidgets.h  NoteWindow.cpp  NoteWindow.h  PARAMETERS.h  TaskWindow.cpp  TaskWindow.h
src/Graph_lib/: GUI.cpp  GUI.h  Graph.h  Window.h
src/MainWindowPart/: MainWindow.cpp  MainWindow.h  date_button.cpp  date_button.h  main.cpp  month.cpp  month.h  pictures.h  year.cpp  year.h
src/src/DayWork/: DayDraw.cpp  DayDraw.h  MyButton.h  NoteWindow.h
src/src/Graph_lib/: GUI.h  Graph.h
src/src/MainWindowPart/: date_button.cpp  date_button.h  month.h
src/src/toDoListFileWork/: README.md
src/src/toDoListFileWork/to_do_list/: chrono.cpp  task_manager2.cpp
src/toDoListFileWork/to_do_list/: chrono.cpp  chrono.h  compile.bat  main.cpp  task_manager.h  task_manager2.cpp
toDoListFileWork/to_do_list/: buf.txt  chrono.cpp  chrono.h  main.cpp  task_manager.cpp  task_manager.h  task_manager2.cpp  tasks.txt
